[gd_scene load_steps=4 format=3 uid="uid://de1gebfnxt8qp"]

[ext_resource type="Script" uid="uid://b743rovtwi1jy" path="res://scripts/pause_menu.gd" id="1_4d25c"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ohkfd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7rcas"]
bg_color = Color(0.98, 0.98, 0.98, 0)

[node name="pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4d25c")

[node name="BackgroundBlur" type="Panel" parent="."]
material = SubResource("ShaderMaterial_ohkfd")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7rcas")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(402, 198)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 25

[node name="Button_Container" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="GameLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/Button_Container"]
layout_mode = 2
text = "Echoes of Deep"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/Button_Container"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="Options_Button" type="Button" parent="CenterContainer/Panel/MarginContainer/Button_Container"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Options"

[node name="Quit_Button" type="Button" parent="CenterContainer/Panel/MarginContainer/Button_Container"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Quit Game"

[connection signal="pressed" from="CenterContainer/Panel/MarginContainer/Button_Container/Quit_Button" to="." method="_on_quit_button_pressed"]
